Revision history for Perl extension Test-Inline

{{$NEXT}}
          - distribution tooling updates
          - removed Pod::Tests dependency that is no longer used

2.213   2013-04-08
	- Updating to Module::Install 1.06
	- Fix tests to handle hash randomisation
	- No functional changes

2.212   2010-11-22
	- Updating to Module::Install 1.00
	- No functional changes

2.211   2009-07-15
	- Updating to Module::Install 0.91
	- More complete removal of Class::Autouse

2.210   2009-05-17
	- Updating to Module::Install 0.88
	- Adding support for error-via-exceptions
	- Removing the use of Class::Autouse
	- Removing the use of base.pm

2.209   2009-04-19
	- Updating to Module::Install 0.83
	- Perl depedency corrected to 5.006

2.208   2007-12-12
	- Updating to Module::Install 0.68
	- Updating bundled tests

2.207   2007-08-17
	- The filenames method not correctly returns 0 when there are no file names.

2.206   2007-08-17
	- Updating Params::Util dep to 0.21 to avoid a problem on ActivePerl
	- Updating List::Util to 1.19 to avoid leaks on some platforms
	- No longer include Test::ClassAPI
	- Skip the false-negative failing readonly tests when testing as root
	- Changed some non-working code in a heredoc that should never be
	  run that was none-the-less breaking the RedHat package generator
	  because it naively scans for dependencies.

2.205   2007-07-12
	- ACTUALLY adding a missing dependency on Test::Script

2.204   2007-07-12
	- Adding a missing dependency on Test::Script
	- Correcting the script/inline2test version

2.203   2007-07-11
	- When overwriting readonly files, delete them properly first.
	  Don't naively assume we can write to them (obviously, duh) :(
	- It turns out that File::chmod is smart enough to correctly
	  make files readonly even on Win32. Removed all the code that
	  skipped on Win32. All platforms now equal again! Yay!

2.202   2007-07-10
	- Adding support for writing test scripts with read-only permissions
	- Upgraded to Module::Install 0.65