@@ -126,7 +126,6 @@ use strict;
 use IO::Handle                     ();
 use List::Util                1.19 ();
 use File::Spec                0.80 ();
-use File::Slurp            9999.04 ();
 use Params::Util              0.21 ();
 use Algorithm::Dependency     1.02 ();
 use Algorithm::Dependency::Source  ();
