@@ -9,6 +9,7 @@ BEGIN {
 }
 
 use File::Spec::Functions ':ALL';
+use Path::Tiny;
 use Test::More tests => 7;
 use Test::Inline ();
 
@@ -19,10 +20,8 @@ use Test::Inline ();
 #####################################################################
 # Test the examples from Inline.pm
 {
-	my $inline_file = File::Slurp::read_file(
-		catfile( 't', 'data', '10_legacy_extract', 'Inline.pm' ),
-		scalar_ref => 1,
-		) or die "Failed to load Inline.pm test file";
+	my $content = path(catfile( 't', 'data', '10_legacy_extract', 'Inline.pm' ))->slurp;
+	my $inline_file = \$content;
 	is( ref($inline_file), 'SCALAR', 'Loaded Inline.pm examples' );
 
 	# Create the Inline object
