@@ -3,6 +3,7 @@ Revision history for Perl extension Test-Inline
 {{$NEXT}}
           - distribution tooling updates
           - removed Pod::Tests dependency that is no longer used
+          - remove use of File::Slurp in favour of Path::Tiny
 
 2.213   2013-04-08
 	- Updating to Module::Install 1.06
